<resources>
    <string name="app_name">ScheduleByNFC</string>
    <string name="no_data_available">No events for this day.</string>
    <string name="dialogDayDetailTitle">Day Details</string>
    <string name="share">Share</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="aboutus">About us</string>
    <string name="reporterror">Report</string>
    <string name="simulatenfc">NFC</string>
    <string name="genpdf">PDF</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
